internal/xds/translator/testdata/out/xds-ir/http-route-rewrite-url-fullpath.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    name: first-listener/gateway_envoyproxy_io
    routes:
    - match:
        pathSeparatedPrefix: /origin
      name: rewrite-route
      route:
        cluster: rewrite-route
        regexRewrite:
          pattern:
            regex: /.*
          substitution: /rewrite
